section enjoy is done

--- a/index.html
+++ b/index.html
@@ -46,7 +46,23 @@
                 </div>
             </div>
         </header>
-        
+
+        <section class="enjoy">
+            <div class="container">
+                <div class="enjoy__content">
+                    <h1 class="enjoy__title title">
+                        <span>Enjoy</span> premium coffee at our charming cafe
+                    </h1>
+                    <p class="enjoy__descr">
+                        With its inviting atmosphere and delicious coffee
+                        options, the Coffee House Resource is a popular
+                        destination for coffee lovers and those seeking a warm
+                        and inviting space to enjoy their favorite beverage.
+                    </p>
+                    <button class="enjoy__btn">Menu</button>
+                </div>
+            </div>
+        </section>
 
         <script type="module" src="src/js/main.js"></script>
     </body>
