--- a/index.html
+++ b/index.html
@@ -50,16 +50,120 @@
         <section class="enjoy">
             <div class="container">
                 <div class="enjoy__content">
-                    <h1 class="enjoy__title title">
-                        <span>Enjoy</span> premium coffee at our charming cafe
-                    </h1>
-                    <p class="enjoy__descr">
-                        With its inviting atmosphere and delicious coffee
-                        options, the Coffee House Resource is a popular
-                        destination for coffee lovers and those seeking a warm
-                        and inviting space to enjoy their favorite beverage.
-                    </p>
-                    <button class="enjoy__btn">Menu</button>
+                    <div class="enjoy__content-text">
+                        <h1 class="enjoy__title title">
+                            <span>Enjoy</span> premium coffee at our charming
+                            cafe
+                        </h1>
+                        <p class="enjoy__descr">
+                            With its inviting atmosphere and delicious coffee
+                            options, the Coffee House Resource is a popular
+                            destination for coffee lovers and those seeking a
+                            warm and inviting space to enjoy their favorite
+                            beverage.
+                        </p>
+                        <button class="enjoy__btn">Menu</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="favourites-coffee">
+            <div class="container">
+                <div class="favourites-coffee__content">
+                    <h2 class="favourites-coffee__title title">
+                        Choose your <span>favorite</span> coffee
+                    </h2>
+
+                    <div class="slider">
+                        <button class="arrow-left">
+                            <svg
+                                width="24"
+                                height="24"
+                                viewBox="0 0 24 24"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    d="M18.5 12H6M6 12L12 6M6 12L12 18"
+                                    stroke="#403F3D"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                            </svg>
+                        </button>
+                        <div class="slider__wrapper">
+                            <div class="slider__item">
+                                <img
+                                    class="slider__item-img"
+                                    src="public/images/slider/coffee-slider-1.png"
+                                    alt=""
+                                />
+                                <div class="slider__item-text">
+                                    <h4 class="slider__item-title title">
+                                        S’mores Frappuccino
+                                    </h4>
+                                    <p class="slider__item-descr">
+                                        This new drink takes an espresso and
+                                        mixes it with brown sugar and cinnamon
+                                        before being topped with oat milk.
+                                    </p>
+                                    <div class="slider__item-price">$5.50</div>
+                                </div>
+                            </div>
+                            <div class="slider__item">
+                                <img
+                                    class="slider__item-img"
+                                    src="public/images/slider/coffee-slider-2.png"
+                                    alt=""
+                                />
+                                <div class="slider__item-text">
+                                    <h4 class="slider__item-title title">
+                                        Caramel Macchiato
+                                    </h4>
+                                    <p class="slider__item-descr">
+                                        Fragrant and unique classic espresso
+                                        with rich caramel-peanut syrup, with
+                                        cream under whipped thick foam.
+                                    </p>
+                                    <div class="slider__item-price">$5.00</div>
+                                </div>
+                            </div>
+                            <div class="slider__item">
+                                <img
+                                    class="slider__item-img"
+                                    src="public/images/slider/coffee-slider-3.png"
+                                    alt=""
+                                />
+                                <div class="slider__item-text">
+                                    <h4 class="slider__item-title title">
+                                        Ice coffee
+                                    </h4>
+                                    <p class="slider__item-descr">
+                                        A popular summer drink that tones and
+                                        invigorates. Prepared from coffee, milk
+                                        and ice.
+                                    </p>
+                                    <div class="slider__item-price">$4.50</div>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="arrow-right">
+                            <svg
+                                width="14"
+                                height="14"
+                                viewBox="0 0 14 14"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    d="M1 7H13.5M13.5 7L7.5 1M13.5 7L7.5 13"
+                                    stroke="#403F3D"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                            </svg>
+                        </button>
+                    </div>
                 </div>
             </div>
         </section>
