--- a/index.html
+++ b/index.html
@@ -80,12 +80,11 @@
                                 width="24"
                                 height="24"
                                 viewBox="0 0 24 24"
-                                fill="none"
                                 xmlns="http://www.w3.org/2000/svg"
                             >
                                 <path
                                     d="M18.5 12H6M6 12L12 6M6 12L12 18"
-                                    stroke="#403F3D"
+                                    stroke="#403f3d"
                                     stroke-linecap="round"
                                     stroke-linejoin="round"
                                 />
@@ -152,14 +151,12 @@
                                 width="14"
                                 height="14"
                                 viewBox="0 0 14 14"
-                                fill="none"
-                                xmlns="http://www.w3.org/2000/svg"
                             >
                                 <path
                                     d="M1 7H13.5M13.5 7L7.5 1M13.5 7L7.5 13"
-                                    stroke="#403F3D"
                                     stroke-linecap="round"
                                     stroke-linejoin="round"
+                                    stroke="#403f3d"
                                 />
                             </svg>
                         </button>
