--- a/index.html
+++ b/index.html
@@ -147,11 +147,7 @@
                             </div>
                         </div>
                         <button class="arrow-right">
-                            <svg
-                                width="14"
-                                height="14"
-                                viewBox="0 0 14 14"
-                            >
+                            <svg width="14" height="14" viewBox="0 0 14 14">
                                 <path
                                     d="M1 7H13.5M13.5 7L7.5 1M13.5 7L7.5 13"
                                     stroke-linecap="round"
@@ -160,6 +156,47 @@
                                 />
                             </svg>
                         </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="about">
+            <div class="container">
+                <div class="about__content">
+                    <h2 class="about__title title">
+                        Resource is <span>the perfect and cozy place</span>
+                        where you can enjoy a variety of hot beverages, relax,
+                        catch up with friends, or get some work done.
+                    </h2>
+                    <div class="about__content-grid-img">
+                        <div class="grid__item">
+                            <img
+                                class="about__content-img1"
+                                src="public/images/about/about-img1.png"
+                                alt=""
+                            />
+                        </div>
+                        <div class="grid__item">
+                            <img
+                                class="about__content-img2"
+                                src="public/images/about/about-img2.png"
+                                alt=""
+                            />
+                        </div>
+                        <div class="grid__item">
+                            <img
+                                class="about__content-img3"
+                                src="public/images/about/about-img3.png"
+                                alt=""
+                            />
+                        </div>
+                        <div class="grid__item">
+                            <img
+                                class="about__content-img4"
+                                src="public/images/about/about-img4.png"
+                                alt=""
+                            />
+                        </div>
                     </div>
                 </div>
             </div>
