--- a/index.html
+++ b/index.html
@@ -277,7 +277,88 @@
                 </div>
             </div>
         </section>
-
+        <footer class="footer">
+            <div class="container">
+                <div class="footer__content">
+                    <div class="footer__content_text-wrapper">
+                        <div class="footer__content__links">
+                            <h2 class="footer__title title">
+                                Sip, Savor, Smile.
+                                <span>It’s coffee time!</span>
+                            </h2>
+                            <div class="footer__links">
+                                <button class="footer__link">
+                                    <svg
+                                        width="13"
+                                        height="22"
+                                        viewBox="0 0 13 22"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            d="M12 1H9C7.67392 1 6.40215 1.52678 5.46447 2.46447C4.52678 3.40215 4 4.67392 4 6V9H1V13H4V21H8V13H11L12 9H8V6C8 5.73478 8.10536 5.48043 8.29289 5.29289C8.48043 5.10536 8.73478 5 9 5H12V1Z"
+                                            stroke="#E1D4C9"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                        />
+                                    </svg>
+                                </button>
+                                <button class="footer__link">
+                                    <svg
+                                        width="24"
+                                        height="24"
+                                        viewBox="0 0 24 24"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            d="M12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16Z"
+                                            stroke="#E1D4C9"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                        />
+                                        <path
+                                            d="M3 16V8C3 5.23858 5.23858 3 8 3H16C18.7614 3 21 5.23858 21 8V16C21 18.7614 18.7614 21 16 21H8C5.23858 21 3 18.7614 3 16Z"
+                                            stroke="#E1D4C9"
+                                        />
+                                        <path
+                                            d="M17.5 6.51L17.51 6.49889"
+                                            stroke="#E1D4C9"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                        />
+                                    </svg>
+                                </button>
+                                <button class="footer__link">
+                                    <svg
+                                        width="24"
+                                        height="20"
+                                        viewBox="0 0 24 20"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            d="M23 1.01006C23 1.01006 20.9821 2.20217 19.86 2.54006C19.2577 1.84757 18.4573 1.35675 17.567 1.13398C16.6767 0.911216 15.7395 0.967251 14.8821 1.29451C14.0247 1.62177 13.2884 2.20446 12.773 2.96377C12.2575 3.72309 11.9877 4.62239 12 5.54006V6.54006C10.2426 6.58562 8.50127 6.19587 6.93101 5.4055C5.36074 4.61513 4.01032 3.44869 3 2.01006C3 2.01006 -1 11.0101 8 15.0101C5.94053 16.408 3.48716 17.109 1 17.0101C10 22.0101 21 17.0101 21 5.51006C20.9991 5.23151 20.9723 4.95365 20.92 4.68006C21.9406 3.67355 23 1.01006 23 1.01006Z"
+                                            stroke="#E1D4C9"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                        />
+                                    </svg>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="footer__contacts">
+                        <h4 class="footer__contacts-title">Contact us</h4>
+                        <ul class="footer__address">
+                            <li id="address">8558 Green Rd., LA</li>
+                            <li id="phone">+1 (603) 555-0123</li>
+                            <li id="worktime">Mon-Sat: 9:00 AM – 23:00 PM</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
         <script type="module" src="src/js/main.js"></script>
     </body>
 </html>
