functional for tabs and tabs html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         </ul>
                     </nav>
                     <div class="header__btn-wrapper">
-                        <a class="header__btn">Menu</a>
+                        <a class="header__btn" href="menu.html">Menu</a>
                     </div>
                 </div>
             </div>
