--- a/menu.html
+++ b/menu.html
@@ -44,18 +44,40 @@
         <section class="menu">
             <div class="container">
                 <h1 class="menu__title title">
-                    Behind each of our cups hides an
+                    Behind each of our cups <br />
+                    hides an
                     <span>amazing surprise</span>
                 </h1>
                 <div class="tab__container">
                     <div class="tab__container-btn">
                         <button type="button" class="button" data-tab="coffee">
+                            <div class="btn__img-wrapper">
+                                <img
+                                    class="tab__btn-icon"
+                                    src="public/images/tabs/buttonIcons/coffee.svg"
+                                    alt=""
+                                />
+                            </div>
                             Coffee
                         </button>
                         <button type="button" class="button" data-tab="tea">
+                            <div class="btn__img-wrapper">
+                                <img
+                                    class="tab__btn-icon"
+                                    src="public/images/tabs/buttonIcons/tea.svg"
+                                    alt=""
+                                />
+                            </div>
                             Tea
                         </button>
                         <button type="button" class="button" data-tab="dessert">
+                            <div class="btn__img-wrapper">
+                                <img
+                                    class="tab__btn-icon"
+                                    src="public/images/tabs/buttonIcons/dessert.svg"
+                                    alt=""
+                                />
+                            </div>
                             Dessert
                         </button>
                     </div>
