tab content finished

--- a/menu.html
+++ b/menu.html
@@ -83,7 +83,140 @@
                     </div>
 
                     <div class="tab__content">
-                        <div id="coffee" class="tab__item active"></div>
+                        <div id="coffee" class="tab__item active">
+                            <div class="tab__item-coffee tab__card">
+                                <img
+                                    class="tab__item-img"
+                                    src="public/images/tabs/coffee/coffee-1.jpg"
+                                    alt=""
+                                />
+                                <div class="tab__item-text">
+                                    <h1 class="tab__item-title title">
+                                        Irish coffee
+                                    </h1>
+                                    <p class="tab__item-descr">
+                                        Fragrant black coffee with Jameson Irish
+                                        whiskey and whipped milk
+                                    </p>
+                                    <p class="tab__item-price">$7.00</p>
+                                </div>
+                            </div>
+                            <div class="tab__item-coffee tab__card">
+                                <img
+                                    class="tab__item-img"
+                                    src="public/images/tabs/coffee/coffee-2.jpg"
+                                    alt=""
+                                />
+                                <div class="tab__item-text tab__card">
+                                    <h1 class="tab__item-title title">
+                                        Kahlua coffee
+                                    </h1>
+                                    <p class="tab__item-descr">
+                                        Classic coffee with milk and Kahlua
+                                        liqueur under a cap of frothed milk
+                                    </p>
+                                    <p class="tab__item-price">$7.00</p>
+                                </div>
+                            </div>
+                            <div class="tab__item-coffee tab__card">
+                                <img
+                                    class="tab__item-img"
+                                    src="public/images/tabs/coffee/coffee-3.jpg"
+                                    alt=""
+                                />
+                                <div class="tab__item-text">
+                                    <h1 class="tab__item-title title">
+                                        Honey raf
+                                    </h1>
+                                    <p class="tab__item-descr">
+                                        Espresso with frothed milk, cream and
+                                        aromatic honey
+                                    </p>
+                                    <p class="tab__item-price">$5.50</p>
+                                </div>
+                            </div>
+                            <div class="tab__item-coffee tab__card">
+                                <img
+                                    class="tab__item-img"
+                                    src="public/images/tabs/coffee/coffee-4.jpg"
+                                    alt=""
+                                />
+                                <div class="tab__item-text">
+                                    <h1 class="tab__item-title title">
+                                        Ice cappuccino
+                                    </h1>
+                                    <p class="tab__item-descr">
+                                        Cappuccino with soft thick foam in
+                                        summer version with ice
+                                    </p>
+                                    <p class="tab__item-price">$5.00</p>
+                                </div>
+                            </div>
+                            <div class="tab__item-coffee tab__card">
+                                <img
+                                    class="tab__item-img"
+                                    src="public/images/tabs/coffee/coffee-5.jpg"
+                                    alt=""
+                                />
+                                <div class="tab__item-text">
+                                    <h1 class="tab__item-title title">
+                                        Espresso
+                                    </h1>
+                                    <p class="tab__item-descr">
+                                        Classic black coffee
+                                    </p>
+                                    <p class="tab__item-price">$4.50</p>
+                                </div>
+                            </div>
+                            <div class="tab__item-coffee tab__card">
+                                <img
+                                    class="tab__item-img"
+                                    src="public/images/tabs/coffee/coffee-6.jpg"
+                                    alt=""
+                                />
+                                <div class="tab__item-text">
+                                    <h1 class="tab__item-title title">Latte</h1>
+                                    <p class="tab__item-descr">
+                                        Espresso coffee with the addition of
+                                        steamed milk and dense milk foam
+                                    </p>
+                                    <p class="tab__item-price">$5.50</p>
+                                </div>
+                            </div>
+                            <div class="tab__item-coffee tab__card">
+                                <img
+                                    class="tab__item-img"
+                                    src="public/images/tabs/coffee/coffee-7.jpg"
+                                    alt=""
+                                />
+                                <div class="tab__item-text">
+                                    <h1 class="tab__item-title title">
+                                        Latte macchiato
+                                    </h1>
+                                    <p class="tab__item-descr">
+                                        Espresso with frothed milk and chocolate
+                                    </p>
+                                    <p class="tab__item-price">$5.50</p>
+                                </div>
+                            </div>
+                            <div class="tab__item-coffee tab__card">
+                                <img
+                                    class="tab__item-img"
+                                    src="public/images/tabs/coffee/coffee-8.jpg"
+                                    alt=""
+                                />
+                                <div class="tab__item-text">
+                                    <h1 class="tab__item-title title">
+                                        Coffee with cognac
+                                    </h1>
+                                    <p class="tab__item-descr">
+                                        Fragrant black coffee with cognac and
+                                        whipped cream
+                                    </p>
+                                    <p class="tab__item-price">$6.50</p>
+                                </div>
+                            </div>
+                        </div>
                         <div id="tea" class="tab__item"></div>
                         <div id="dessert" class="tab__item"></div>
                     </div>
