media query for header

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
                         />
                     </a>
                     <nav class="header__menu">
+                        <div class="burger__menu">
+                            <button class="burder">
+                                <span></span>
+                                <span></span>
+                            </button>
+                        </div>
                         <ul class="menu__list">
                             <li class="menu__item">
                                 <a class="menu__link" href="#"
