section about for 768px screen

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     </a>
                     <nav class="header__menu">
                         <div class="burger__menu">
-                            <button class="burder">
+                            <button class="burger">
                                 <span></span>
                                 <span></span>
                             </button>
@@ -114,7 +114,7 @@
                                     </p>
                                     <div class="slider__item-price">$5.50</div>
                                 </div>
-                            </div>
+                            </div>  
                             <div class="slider__item">
                                 <img
                                     class="slider__item-img"
